# house-of-wisdom

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  __init__.py  admin.py  apps.py  models.py  permissions.py  pyproject.toml  requirements.txt  serializers.py  tests.py  urls.py  views.py
.github/workflows/: ci.yml  django.yml
accomplishments/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
accomplishments/tests/: __init__.py  test_models.py  text_views.py
bah_ui/: __init__.py  apps.py  urls.py
bah_ui/views/: __init__.py  create.py  delete.py  detail.py  list.py  mixins.py  update.py
bayt_al_hikmah/: __init__.py  admin.py  apps.py  mixins.py  permissions.py  urls.py  views.py
bayt_al_hikmah/answers/: __init__.py  apps.py  models.py  serializers.py  views.py
bayt_al_hikmah/assignments/: __init__.py  apps.py  models.py  serializers.py  views.py
bayt_al_hikmah/blog/: __init__.py  (+4 more)
courses/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
enrollments/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
how/: __init__.py  apps.py  permissions.py  urls.py
instructors/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
items/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
modules/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
projects/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
specializations/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
tests/: __init__.py
users/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
(+685 files in other folders)
