[tool.poetry]
package-mode = false
name = "bayt-al-hikmah"
version = "0.1.0"
description = "Bayt al-Hikmah, an innovative Learning Management System (LMS)."
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "bayt_al_hikmah" }]

[tool.poetry.dependencies]
python = ">=3.10"
django = ">=5.2.1"
django-cors-headers = ">=4.7.0"
django-filter = ">=25.1"
djangorestframework = ">=3.16.0"
djoser = ">=2.3.1"
drf-restwind = ">=0.1.8"
huggingface-hub = ">=0.31.1"
pillow = ">=11.2.1"
python-dotenv = ">=1.1.0"
wagtail = ">=7.0"

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0"
ruff = ">=0.11.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
